--- a/conti.maurizio.RBMMFClient/conti.maurizio.RBMMFWebClient/conti.maurizio.RBMMFWebClient.csproj
+++ b/conti.maurizio.RBMMFClient/conti.maurizio.RBMMFWebClient/conti.maurizio.RBMMFWebClient.csproj
@@ -66,6 +66,8 @@
     <Reference Include="System.EnterpriseServices" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Ambiente1.html" />
+    <Content Include="OnOff.html" />
     <Content Include="packages.config" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
